Add raw contents

--- a/content/english/archive/sp_01.md
+++ b/content/english/archive/sp_01.md
@@ -11,3 +11,68 @@ The statement announces that two founding members, Comrade Satyananda Bhattachar
 The press release includes a welcoming quote from the prominent national leader, Dr. Rammanohar Lohia, who expressed hope that their return would be "helpful in radicalization of the people." The statement was sent to the "Hindusthan Standard" newspaper for publication.
 
 [Click here to view the full document (PDF)](/documents/sp_01.pdf)
+
+<details>
+<summary>View Extracted Text</summary>
+
+<pre>
+ফোন
+সোস্যালিস্ট পার্টি'
+পশ্চিম বাংলা)
+सोशलिस्ट
+(१० बंगाल)
+							৩১৩, নন্দন রোড, কলিকাতা-২৫
+३१ए, नन्दन रोड, कलकत्ता-२५
+তাঃ
+August 12, 1962.
+SOCIALIST PARTY (WEST BENGAL)
+Com. Dine Dasgupta, Secretary, West Bengal
+Socialist Party in a prese statement says:-
+Com. Satyananda Bhattacharya, Ex-Secretary,
+Socialist Party (West Bengal) and a Councillor of
+The Calcutta Corporation and Com. Naresh Bhowmick
+Ex-Secretary, Socialist Party (Calcutta) in a
+pint letter addressed to the party have expressed
+teir willingness to workwith the porty as the ban
+inosed on them debarred party membership for
+yers has been expired by this time. They were
+fouders of the Party.
+Thes expressed their unflincing faith on the
+party as they feel that the Socialist Party is
+mother organisation of a socialist who believe
+socialism. The precept and practice su long
+enunciated and persuaded by the party will
+Bacon-light in imbubing ruture generations fo
+achievement of a true socialist swatality 800 ja
+of plenty all it is also indicated/their
+letter about 50 members who were inactive solong
+will follow them.
+
+ফোন
+• সোস্যালিষ্ট পার্টি'
+(প্রশ্চিম বাংলা)
+सोशलिस्ट पार्टी
+(१० बंगाल)
+(2)
+							৩১৩, নন্দন রোড, কলিকাতা-২৫
+३१ए, नन्दन रोड, कलकत्ता-२५
+তাঃ
+Dr. Rammanohar Lohia, Socialist Leader
+welcoming this decision of the comrades says
+"I welcome return of these comrades and
+-
+hope that they will be helpful in radicalization
+of the people".
+To
+The News Editor,
+Hindusthan Shandard
+Dear Sir,
+We shall be nhliana
+nely
+arrange to publish this news in your esteemed
+daily.
+Youns faithfully,
+Avis
+Off. Secretary.
+</pre>
+</details>
