--- a/content/english/archive/sp_02.md
+++ b/content/english/archive/sp_02.md
@@ -11,3 +11,88 @@ In the letter, Rabi Roy expresses his happiness at Bhowmick's decision to rejoin
 The letter also serves a practical purpose, providing contact details for other key party members in the region, such as Dinesh Das Gupta and Kiran Bezbarua, to ensure smooth coordination. It is a significant piece of correspondence, illustrating the party's internal strategy, its views on key national issues, and the role Naresh Bhowmick was expected to play in strengthening the party in Assam.
 
 [Click here to view the full document (PDF)](/documents/sp_02.pdf)
+
+<details>
+<summary>View Extracted Text</summary>
+
+<pre>
+ESPEE
+सोशलिस्ट पार्टी
+केन्द्रीय कार्यालय
+१४-१-३२३, सीतारामपेठ, हैदराबाद (आं. प्र.)
+फोन : २७४२
+Dated: 4-10-1961.
+To
+Sri. Naresh Bhowmick,
+Ex- Secretary Socialist Party
+(Calcutta),
+32, Shyam Bazar Street,
+CALCUTTA-5.
+Dear Comrade,
+Thank you very much for your letter
+th 1st
+etterg
+1st October. It is good of you that you
+have decided to join the Party again.
+It is high time that you must bring the
+students and the youths to take active
+part in the party's activities since they
+are under your influence. You can now
+form a active Unit in district Silchar
+and organize the party at different places.
+Dr.Lohia is now touring the
+districts of Uttar Pradesh. Hence he
+can't be available at present for consul-
+tations. His programme has already fixed
+till December.
+I think our party is very clear on
+question of language. Let me tell you
+that a people's movement against English
+can only solve the problem. Our Assan
+unit also is clear on the language
+problem. The P.S.P., Congress and the
+communist in Assam have exploited the
+language question further her own advantages.
+They are all cosmopolitan and are in
+favour of returning English. Hence I
+
+ESPRE
+फोन : २७४२
+सोशलिस्ट पार्टी
+केन्द्रीय कार्यालय
+१४-१-३२३, सीतारामपेठ, हैदराबाद (आं. प्र.)
+that
+.
+2
+feel since Silchar is in Assam you have
+to work under the Assam party. I think
+you will feel no difficulty in working
+with our Assam comrades for achieving the
+Socialists objective.
+I am writting to Com. Dinesh das
+Gupta who happens to be a member of the
+National Committee about you. You please
+contact him and talk to him about this.
+I am
+I am giving below the address of
+the Secretary of the Assam Party. You can
+contact him on your way to Silchar.
+also giving the address of the Com. Dinesh
+Das Gupta.
+Hope to receive your reply immediately.
+With greetings,
+Sri. Dinesh Das Gupta,
+Yours Conradely,
+Robikoy
+(Rabi Roy )
+General Secretary.
+Socialist Party Office,
+31-A, Nandan Road,
+CALCUTTA-25.
+Kiran Bez barua (Barrisk)
+Secretary,
+Socialist Party (Assam),
+Uzanbazar,
+GAUHATI ASSAM.
+</pre>
+</details>
