--- a/content/english/archive/sp_03.md
+++ b/content/english/archive/sp_03.md
@@ -15,3 +15,97 @@ In this detailed correspondence, Bhowmick provides context for his request:
 The letter offers a compelling personal narrative of his political convictions and his strategic plan for contributing to the party's growth in Assam.
 
 [Click here to view the full document (PDF)](/documents/sp_03.pdf)
+
+<details>
+<summary>View Extracted Text</summary>
+
+<pre>
+From: Naresh Bhowmick,
+Ex-Secretary, Socialist Party (Cal)
+32, Shyambazar Street, Calcutta-5.
+October 2, 1961.
+Dear Comrade,81 83133% 67
+Perhaps you will remember that
+disciplinary action was taken against me by
+the Control Commission along with two other
+Bengal comrades (Sri Satyananda Bhattacharjee
+& Bhola Chatterji) on the ground of our
+participation in the meeting of Faction Group
+held in Delhi in 1958. As a true socialist
+I had no other alternative but to obey the
+party decision till expiry of the period and
+now, I intend to join the party again.
+A
+By this time I have shifted my field
+of activities from Calcutta to Silchar (Assam)
+and since last two years I have been working
+there as a socialist without any party affi-
+liation. Being afraid of my presence an
+interested section of Cachar politicians had
+instituted a defamation case against me
+(known to you) in September 1959, quoting my
+speech delivered at a meeting of silchar
+College Students Guardians Association that
+I have insinuated them publicly with view to
+lower them in the estimation of public and
+they have been defamed. The case continued
+for long two years in the court and just only
+on last 19th June, 1961, the complainant
+party unconditionally withdrew the case being
+afraid of loosing the same in the court. In
+connection with the recent language movement
+I had been detained by the police on 18th
+May, just before the date of firing, although,
+I had sharp difference with the organisers
+of the movement (mostly P.S.P & Congress) on
+policy matters.
+Ρ.Τ.Ο.
+
+(2)
+১
+It is interesting to note here that both
+Sangram Parishad & Congress jointly acted
+and they persuaded the police to arrest me,
+although, I was never connected with the
+movement instead of their best effort to
+persuade me to take active part in the move-
+ment. Naturally, they apprehended, if any
+movement is at all launched, I may act against
+it, so they reported to Police that I am the
+Scrediated leader of the movement. As regards
+Language issue I stand by your decision and
+I will do that in future. It is also grati-
+fying to note that a large section of Silchar
+students endorse my views and they never
+participated in the movement. Only a handful
+of conscious students were in the movement.
+Now, I have decided to organise a
+party unit in Cachar but one thing I like to
+write you in this connection, is that, at
+present the unit will function as an indepen-
+dent one under Central Party with a view to
+get rid of language fanatics who are active
+and scandelously propogating against the
+role of Congress, P.S.P & Communist in Assam
+valley. But I assure you that within a very
+short period I hope the situation will be
+changed I and good relationship between
+different communities in Assam is bound to
+re-established. I have written to Central
+Party for their approval, so, I hope you will
+not raise any objection in this respect and
+give me an opportunity to work in the party
+and to make the proposed unit a very strong
+one.
+Now, I am in Calcutta and expected
+to go back Silchar by the last week of Oct.
+Please write to me your views to my above
+address and oblige. (studio) KaiA
+T
+Yours comradely,
+(1) Golap Barkava
+(2) Kiran Kumiatrejbirch
+res
+2/18/61.
+</pre>
+</details>
